- fix filter modal spacings

--- a/public/assets/sass/health.sass
+++ b/public/assets/sass/health.sass
@@ -124,6 +124,7 @@ ion-button.white
   display: flex
   flex-direction: column
   margin-left: 10px
+  margin-bottom: 100px
 
   .filter-options
     display: flex
